--- a/dissertation.bib
+++ b/dissertation.bib
@@ -1945,7 +1945,7 @@ These results have implications for targeting substance abuse prevention program
   pages = {1463-1470},
   keywords = {Personality,Psychiatry,development,family history,college,Peer deviance},
   author = {Kendler, Kenneth S. and Myers, John and Dick, Danielle},
-  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/U748DKZW/s00127-015-1031-4.html}
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/CQUN3PLF/Kendler et al. - 2015 - The stability and predictors of peer group devianc.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/U748DKZW/s00127-015-1031-4.html}
 }
 
 @article{maner2012,
@@ -2590,6 +2590,24 @@ To prevent increases in substance use in emerging adulthood, interventions shoul
   pmcid = {PMC2903759}
 }
 
+@article{westfall2016,
+  title = {Statistically {{Controlling}} for {{Confounding Constructs Is Harder}} than {{You Think}}},
+  volume = {11},
+  issn = {1932-6203},
+  url = {http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0152719},
+  doi = {10.1371/journal.pone.0152719},
+  abstract = {Social scientists often seek to demonstrate that a construct has  incremental validity  over and above other related constructs. However, these claims are typically supported by measurement-level models that fail to consider the effects of measurement (un)reliability. We use intuitive examples, Monte Carlo simulations, and a novel analytical framework to demonstrate that common strategies for establishing incremental construct validity using multiple regression analysis exhibit extremely high Type I error rates under parameter regimes common in many psychological domains. Counterintuitively, we find that error rates are highest—in some cases approaching 100\%—when sample sizes are large and reliability is moderate. Our findings suggest that a potentially large proportion of incremental validity claims made in the literature are spurious. We present a web application ( http://jakewestfall.org/ivy/ ) that readers can use to explore the statistical properties of these and other incremental validity arguments. We conclude by reviewing SEM-based statistical approaches that appropriately control the Type I error rate when attempting to establish incremental validity.},
+  number = {3},
+  journaltitle = {PLOS ONE},
+  shortjournal = {PLOS ONE},
+  urldate = {2016-07-22},
+  date = {2016-03-31},
+  pages = {e0152719},
+  keywords = {_diss,Behavior,forecasting,Personality,Psychology,Research validity,Social sciences,Swimming,Test statistics},
+  author = {Westfall, Jacob and Yarkoni, Tal},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/3CKPGTXW/Westfall and Yarkoni - 2016 - Statistically Controlling for Confounding Construc.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/9MRA4FGC/Westfall and Yarkoni - 2016 - Statistically Controlling for Confounding Construc.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/63NK6N6X/article.html;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/ER994346/article.html}
+}
+
 @article{stewart-williams2013,
   title = {The {{Ape That Thought It Was}} a {{Peacock}}: {{Does Evolutionary Psychology Exaggerate Human Sex Differences}}?},
   volume = {24},
@@ -3113,7 +3131,7 @@ PUBLIC HEALTH ACTION: YRBSS data are used widely to compare the prevalence of he
   date = {2005-12-01},
   pages = {559-574},
   author = {Whiteside, Stephen P. and Lynam, Donald R. and Miller, Joshua D. and Reynolds, Sarah K.},
-  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/DYS6U7A7/Whiteside et al. - 2005 - Validation of the UPPS impulsive behaviour scale .pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/9DXM8PAZ/abstract.html}
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/DYS6U7A7/Whiteside et al. - 2005 - Validation of the UPPS impulsive behaviour scale .pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/JAEEGFRC/TDS_UPPS-P.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/9DXM8PAZ/abstract.html}
 }
 
 @article{katz_effects_2000,
@@ -4566,7 +4584,7 @@ The results are important because they suggest that by targeting depressive symp
   issn = {2041-1723},
   url = {https://www.nature.com/articles/s41467-017-02174-z},
   doi = {10.1038/s41467-017-02174-z},
-  abstract = {Adolescence is associated with negative behaviors that are related to enhanced reward-related striatal activity, but it is unclear whether this activity could also be beneficial. Here, authors report longitudinal data showing that enhanced striatal activity is related with increased learning ability.$<$/p$>$},
+  abstract = {$<$p$>$Adolescence is associated with negative behaviors that are related to enhanced reward-related striatal activity, but it is unclear whether this activity could also be beneficial. Here, authors report longitudinal data showing that enhanced striatal activity is related with increased learning ability.$<$/p$>$},
   number = {1},
   journaltitle = {Nature Communications},
   urldate = {2017-12-21},
@@ -6960,6 +6978,150 @@ CONCLUSIONS: Computational approaches allow us to disentangle contributions of m
   keywords = {_diss},
   author = {Lakens, Daniël},
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/ZTDUNNS3/Lakens - 2017 - Equivalence Tests A Practical Primer for t Tests,.pdf}
+}
+
+@article{borsari2001,
+  langid = {english},
+  title = {Peer Influences on College Drinking: {{A}} Review of the Research},
+  volume = {13},
+  issn = {08993289},
+  url = {http://linkinghub.elsevier.com/retrieve/pii/S0899328901000980},
+  doi = {10.1016/S0899-3289(01)00098-0},
+  shorttitle = {Peer Influences on College Drinking},
+  abstract = {Peer pressure is consistently implicated in the excessive drinking of college students. However, both theory and empirical findings suggest that peer pressure is a combination of three distinct influences: overt offers of alcohol, modeling, and social norms. Overt offers of alcohol can range from polite gestures to intense goading or commands to drink. Modeling occurs when the student’s behavior corresponds to another student’s concurrent drinking behavior. Perceived social norms can serve to make excessive alcohol use appear common and acceptable to the student. This review critically examines the literature on each form of peer influence and provides suggestions for future research. D 2001 Elsevier Science Inc. All rights reserved.},
+  number = {4},
+  journaltitle = {Journal of Substance Abuse},
+  urldate = {2018-07-13},
+  date = {2001-12},
+  pages = {391-424},
+  author = {Borsari, Brian and Carey, Kate B},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/XBRWTBWJ/Borsari and Carey - 2001 - Peer influences on college drinking A review of t.pdf}
+}
+
+@article{martinez,
+  langid = {english},
+  title = {Deliberate Induction of Alcohol Tolerance: Empirical Introduction to a Novel Health Risk},
+  volume = {105},
+  issn = {1360-0443},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1360-0443.2010.03042.x},
+  doi = {10.1111/j.1360-0443.2010.03042.x},
+  shorttitle = {Deliberate Induction of Alcohol Tolerance},
+  abstract = {Aims Alcohol tolerance is a hallmark indicator of alcohol dependence. Even so, the allure of peers' admiration for having the ability to drink heavily may lead some adolescents and young adults to practice, or ‘train’, to increase their tolerance (particularly at US colleges, where heavy drinking is highly prevalent and central to the social culture). This is a potential health hazard that has not been documented empirically. Thus, we initiated a study of tolerance ‘training’ and its association to risky and heavy drinking. Design, setting and participants A cross-sectional online survey of 990 college student life-time drinkers at a large Midwestern US university. Findings Of the sample, 9.9\% (n = 97) reported deliberately ‘training’ to increase tolerance. On average, they reported increasing from approximately seven to 10 US standard drinks in a night prior to ‘training’ to 12–15 drinks at the end of ‘training,’ over approximately 2–3 weeks' duration. Although the proportion of frequent binge drinking among ‘non-trainers’ (34.4\%) was similar to national rates, ‘trainers’ were much more likely to be frequent bingers (76.3\%; OR = 6.15). Conclusions A number of students report deliberately inducing alcohol tolerance, probably directly increasing the risk for alcohol poisoning and other acute harms and/or dependence. This phenomenon might additionally be applicable to other populations, and deserves further study and attention as a potential personal and public health risk. Prevention efforts might aim to reduce the perceived importance of heavy-drinking abilities.},
+  number = {10},
+  journaltitle = {Addiction},
+  urldate = {2018-07-13},
+  pages = {1767-1770},
+  keywords = {Alcohol dependence,heavy drinking,symptom,tolerance,training},
+  author = {Martinez, Julia A. and Steinley, Douglas and Sher, Kenneth J.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/ZU3ZZMCV/Martinez et al. - Deliberate induction of alcohol tolerance empiric.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/HFL32GKL/j.1360-0443.2010.03042.html}
+}
+
+@article{peralta2007,
+  langid = {english},
+  title = {College {{Alcohol Use}} and the {{Embodiment}} of {{Hegemonic Masculinity}} among {{European American Men}}},
+  volume = {56},
+  issn = {0360-0025, 1573-2762},
+  url = {http://link.springer.com/10.1007/s11199-007-9233-1},
+  doi = {10.1007/s11199-007-9233-1},
+  abstract = {This article concerns alcohol use as it pertains to the construction of White masculinity through an analysis of students’ accounts. Seventy-eight face-to-face interviews were conducted with volunteer female and male, African American, European American, heterosexual and homosexual students at a mid-sized university. Results suggest that the meaning of public drinking is to express a form of masculinity. In students’ gendered descriptions of their own and peers’ drinking behavior, alcohol use among White men was found to symbolize the embodiment of hegemonic masculinity. Masculinities were constructed via drinking stories, the body’s ability to tolerate alcohol, and the relevance of drinking too little or not at all, which symbolized weakness, homosexuality, or femininity. Implications for social policy and future research are discussed.},
+  number = {11-12},
+  journaltitle = {Sex Roles},
+  urldate = {2018-07-13},
+  date = {2007-06-26},
+  pages = {741-756},
+  author = {Peralta, Robert L.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/TBYKFEHR/Peralta - 2007 - College Alcohol Use and the Embodiment of Hegemoni.pdf}
+}
+
+@article{cyders2014,
+  langid = {english},
+  title = {Examination of a Short {{English}} Version of the {{UPPS}}-{{P Impulsive Behavior Scale}}},
+  volume = {39},
+  issn = {03064603},
+  url = {http://linkinghub.elsevier.com/retrieve/pii/S0306460314000513},
+  doi = {10.1016/j.addbeh.2014.02.013},
+  abstract = {The current study examines a recently developed short version of the UPPS-P Impulsive Behavior Scale. Participants were 251 undergraduate students (59.3\% male; mean age = 21.16 (SD = 4.18); 72\% Caucasian). The short version generally replicated the internal consistency (0.74 – 0.88 across subscales) and inter-scale correlations of the full UPPS-P. Moreover, the estimated loss of shared variance was small (0\% – 6.4\% reductions across subscales) as compared to a 66\% timesavings. Structural equation modeling replicated previously supported factor structures and relationships to external outcomes using the full UPPS-P. The short UPPS-P scale should be considered a valid and reliable alternative to the full UPPS-P.},
+  number = {9},
+  journaltitle = {Addictive Behaviors},
+  urldate = {2018-07-15},
+  date = {2014-09},
+  pages = {1372-1376},
+  author = {Cyders, Melissa A. and Littlefield, Andrew K. and Coffey, Scott and Karyadi, Kenny A.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/4EPV7B24/Cyders et al. - 2014 - Examination of a short English version of the UPPS.pdf}
+}
+
+@article{mcapaldi2002,
+  title = {Heterosexual Risk Behaviors in At-Risk Young Men from Early Adolescence to Young Adulthood: {{Prevalence}}, Prediction, and Association with {{STD}} Contraction},
+  volume = {38},
+  doi = {10.1037//0012-1649.38.3.394},
+  shorttitle = {Heterosexual Risk Behaviors in At-Risk Young Men from Early Adolescence to Young Adulthood},
+  abstract = {Health-compromising lifestyles involve stable patterns of behavior and are associated with high-risk social environments and accelerated developmental trajectories. Developmentally, antisocial behavior is associated with such lifestyles. Mediational models predicting a measure of lifetime average sexual risk behavior assessed over a 10-year period (from ages 13-14 to 22-23 years) were examined for a sample of at-risk young men. The measure included years of abstinence from intercourse as well as levels of 3 key heterosexual indicators of risk: frequency of intercourse, number of intercourse partners, and condom use. Predictors included lifetime average measures of contextual, family, and peer process variables and individual behaviors. In addition, similar models for prediction of STD contraction were assessed. A younger age of onset of intercourse was associated with higher numbers of intercourse partners after onset. As hypothesized, findings indicated mediational associations of socioeconomic status, parental monitoring, deviant-peer association, antisocial behavior, and substance use in the prediction of sexual risk behavior. Lower condom use also predicted STD contraction.},
+  journaltitle = {Developmental psychology},
+  date = {2002-06-01},
+  pages = {394-406},
+  author = {M Capaldi, Deborah and Stoolmiller, Mike and Clark, Sara and Owen, Lee},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/6H88UJEK/M Capaldi et al. - 2002 - Heterosexual risk behaviors in at-risk young men f.pdf}
+}
+
+@article{smith2006,
+  langid = {english},
+  title = {Adolescent {{Girls}}’ {{Offending}} and {{Health}}-{{Risking Sexual Behavior}}: {{The Predictive Role}} of {{Trauma}}},
+  volume = {11},
+  issn = {1077-5595, 1552-6119},
+  url = {http://journals.sagepub.com/doi/10.1177/1077559506291950},
+  doi = {10.1177/1077559506291950},
+  shorttitle = {Adolescent {{Girls}}’ {{Offending}} and {{Health}}-{{Risking Sexual Behavior}}},
+  abstract = {Several studies have highlighted high levels of risk for girls who have been exposed to traumatic experiences, but little is known about the exact relationship between traumatic experiences and problems with delinquency and health-risking sexual behavior (e.g., precipitory and/or exacerbatory roles). However, numerous short- and long-term detrimental effects have been linked to trauma, delinquency, and health-risking sexual behavior. The utility of diagnostic and experiential trauma measures in predicting the greatest risk for poor outcomes for delinquent girls was examined in this study. Results indicate that the experiential measures of trauma (cumulative and composite trauma scores) significantly predicted adolescent offending and adolescent health-risking sexual behavior, whereas the diagnostic measures of trauma (full and partial diagnostic criteria) did not.},
+  number = {4},
+  journaltitle = {Child Maltreatment},
+  urldate = {2018-07-15},
+  date = {2006-11},
+  pages = {346-353},
+  author = {Smith, Dana K. and Leve, Leslie D. and Chamberlain, Patricia},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/LYGX6R9S/Smith et al. - 2006 - Adolescent Girls’ Offending and Health-Risking Sex.pdf}
+}
+
+@article{harden2014b,
+  langid = {english},
+  title = {Genetic Influences on Adolescent Sexual Behavior: {{Why}} Genes Matter for Environmentally Oriented Researchers.},
+  volume = {140},
+  issn = {1939-1455, 0033-2909},
+  url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/a0033564},
+  doi = {10.1037/a0033564},
+  shorttitle = {Genetic Influences on Adolescent Sexual Behavior},
+  abstract = {There are dramatic individual differences among adolescents in how and when they become sexually active adults, and early sexual activity is frequently cited as a cause of concern for scientists, policymakers, and the general public. Understanding the causes and developmental impact of adolescent sexual activity can be furthered by considering genes as a source of individual differences. Quantitative behavioral genetics (i.e., twin and family studies) and candidate gene association studies now provide clear evidence for the genetic underpinnings of individual differences in adolescent sexual behavior and related phenotypes. Genetic influences on sexual behavior may operate through a variety of direct and indirect mechanisms, including pubertal development, testosterone levels, and dopaminergic systems. Genetic differences may be systematically associated with exposure to environments that are commonly treated as causes of sexual behavior (gene– environment correlation). Possible gene– environment correlations pose a serious challenge for interpreting the results of much behavioral research. Multivariate, genetically informed research on adolescent sexual behavior compares twins and family members as a form of quasi experiment: How do twins who differ in their sexual experiences differ in their later development? The small but growing body of genetically informed research has already challenged dominant assumptions regarding the etiology and sequelae of adolescent sexual behavior, with some studies indicating possible positive effects of teenage sexuality. Studies of Gene ϫ Environment interaction may further elucidate the mechanisms by which genes and environments combine to shape the development of sexual behavior and its psychosocial consequences. Overall, the existence of heritable variation in adolescent sexual behavior has profound implications for environmentally oriented theory and research.},
+  number = {2},
+  journaltitle = {Psychological Bulletin},
+  urldate = {2018-07-15},
+  date = {2014},
+  pages = {434-465},
+  author = {Harden, K. Paige},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/SSL64LV8/Harden - 2014 - Genetic influences on adolescent sexual behavior .pdf}
+}
+
+@unpublished{centersfordiseasecontrolandprevention2015,
+  title = {Youth {{Risk Behavior Survey Questionnaire}}},
+  url = {www.cdc.gov/yrbs},
+  date = {2015},
+  author = {Centers for Disease Control {and} Prevention}
+}
+
+@article{mallett2009,
+  langid = {english},
+  title = {Assessing College Students' Perceptions of Tolerance to Alcohol Using Social Cues: {{The Social Tolerance Index}}},
+  volume = {34},
+  issn = {03064603},
+  url = {http://linkinghub.elsevier.com/retrieve/pii/S030646030800275X},
+  doi = {10.1016/j.addbeh.2008.10.008},
+  shorttitle = {Assessing College Students' Perceptions of Tolerance to Alcohol Using Social Cues},
+  abstract = {Increased tolerance to alcohol is considered a risk factor for developing future problems. While college students are considered a high-risk population in relation to alcohol use it is suggested that tolerance operates differently in this population than in chronic drinking samples. Individuals' perceptions about their level of tolerance measured by social cues and comparisons to peers may inﬂuence drinking behavior. The present study evaluated the Social Tolerance Index (STI), a measure designed to examine perceptions about personal tolerance to alcohol using social cues in college students. College students (n = 177) completed measures of social tolerance, social desirability, drinking rates, and demographic information at baseline, 2-week, and 4-week follow-up assessments to assess test–retest reliability. A conﬁrmatory factor analysis was conducted on the STI. In addition, tests of discriminant, construct and predictive validities were also conducted. The STI demonstrated good reliability and validity for use in a college student population.},
+  number = {2},
+  journaltitle = {Addictive Behaviors},
+  urldate = {2018-07-16},
+  date = {2009-02},
+  pages = {219-222},
+  author = {Mallett, Kimberly A. and Lee, Christine M. and Turrisi, Rob and Larimer, Mary E.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/JT4L87EK/Mallett et al. - 2009 - Assessing college students' perceptions of toleran.pdf}
 }
 
 
